# utopia-eda

./: CMakeLists.txt  CODE_STYLE  Lexer.l  Makefile  Makefile.file  Parser_test  Parser_test.cpp  README  c432.v.txt  dddf.txt  dinput.txt  doutput.txt  einput.txt  eoutput.txt  file.txt  fordelete.cpp  lex.yy.c  lexer.c  lexer.h  lexer.l  logs  logs.graphml  main  main.cpp  not_for_use.txt  parser  parser.cpp  qwer.xml  s27.txt  support_lexer  support_lexer.cpp  tempCodeRunnerFile.cpp  token.h  tokens  tokens.h
lib/lorina/lib/: CMakeLists.txt
lib/lorina/lib/fmt/fmt/: args.h  format.h
src/gate/: CMakeLists.txt  README.md
src/gate/Blif/: main.cpp
src/gate/Liberty/: main.cpp
src/gate/Verilog/: main.cpp
src/gate/debugger/: BDD_checker.cpp  BDD_checker.h  RND_checker.cpp  RND_checker.h  base_checker.cpp  base_checker.h  bdd_checker.cpp  bdd_checker.h  checker.cpp  checker.h  classBDD.cpp  classBDD.h  classLEC.cpp  classLEC.h  classRND.cpp  classRND.h  context.h  encoder.cpp  encoder.h  generator.cpp  miter.cpp  miter.h  rnd_checker.cpp  rnd_checker.h  symexec.cpp  symexec.h
src/gate/liberty/: fill_database.cpp  fill_database.h  parser_liberty.cpp  parser_liberty.h
src/gate/model/: gate.cpp  gate.h  gnet.cpp  gnet.h  gsymbol.cpp  gsymbol.h  hMetis_formatter.cpp  hMetis_formatter.h  utils.cpp  utils.h
src/gate/optimizer/: check_cut.cpp  check_cut.h  cone_visitor.cpp  cone_visitor.h  cut_storage.h  cuts_finder_visitor.cpp  cuts_finder_visitor.h  links_add_counter.cpp  links_add_counter.h  links_clean.cpp  links_clean.h  links_clean_counter.cpp  links_clean_counter.h  main.cpp  optimizer.cpp  optimizer.h  optimizer_visitor.cpp  optimizer_visitor.h  rwdatabase.cpp  rwdatabase.h  rwmanager.cpp  rwmanager.h  substitute_visitor.cpp  substitute_visitor.h  tracker_visitor.cpp  tracker_visitor.h  ttbuilder.cpp  ttbuilder.h  util.cpp  util.h  visitor.h  walker.cpp  walker.h
src/gate/optimizer/database/: abc.cpp  abc.h
src/gate/optimizer/database/abc/: rwrUtil.c
src/gate/optimizer/strategy/: apply_search_optimizer.cpp  apply_search_optimizer.h  exhaustive_search_optimizer.cpp  exhaustive_search_optimizer.h  track_strategy.cpp  track_strategy.h  zero_optimizer.cpp  zero_optimizer.h
src/gate/optimizer/tech_map/: replacement_struct.h  tech_map_visitor.cpp  tech_map_visitor.h  tech_mapper.cpp  tech_mapper.h
src/gate/optimizer/tech_map/strategy/: replacement_cut.cpp  replacement_cut.h  simple_techmapper.cpp  simple_techmapper.h
src/gate/parser/: gate_verilog_parser.cpp  gate_verilog_parser.h  reader_gate.h
src/gate/parser/bench/: CMakeLists.txt  lexer.l  lexex.c  parser  parser.cpp  parser.h  parser_foo.h  parser_main.cpp  tokens.h
src/gate/parser/bench/test/: README.txt  dddf.txt  doutput.txt  einput.txt
src/gate/parser/glverilog/: CMakeLists.txt  Lexer.l  Makefile  Parser_test.cpp  VerilogMegaSimple.v.txt  VerilogTransTest.v.txt  c432.v.txt  parse_fu.h  parser.h  parser_glverilog.cpp  parser_main.cpp  token.h
src/gate/parser/glverilog/Tests/: Test1.v.txt  Test10.v.txt  Test10Output.txt  Test11.v.txt  Test11Output.txt  Test12.v.txt  Test12Output.txt  Test13.v.txt  Test13Output.txt  Test14.v.txt  Test14Output.txt  Test15.v.txt  Test15Output.txt  Test16.v.txt  Test16Output.txt  Test17.v.txt  Test17Output.txt  Test18.v.txt  Test18Output.txt  Test19.v.txt  Test1Output.txt  Test2.v.txt  Test2Output.txt  Test3.v.txt  Test3Output.txt  Test4.v.txt  Test4Output.txt  Test5.v.txt  Test5Output.txt  Test6.v.txt  Test6Output.txt  (+6 more)
src/gate/parserGnet/: main.cpp  parserGnet.cpp  parserGnet.h  testGnet.cpp
src/gate/parserRIL/: main.cpp  main_with_debug.cpp
src/gate/parserRIL/tests/: abc_02.v  summ1.v
src/gate/premapper/: aigmapper.cpp  aigmapper.h  migmapper.cpp  migmapper.h  premapper.cpp  premapper.h  xagmapper.cpp  xagmapper.h  xmgmapper.cpp  xmgmapper.h
src/gate/printer/: GraphML.cpp  dot.cpp  dot.h  garphml.cpp  graphml.cpp  graphml.h
src/gate/rwdatabase/: rwdatabase.h  rwdb_lazy.h
src/gate/simulator/: simulator.cpp  simulator.h
src/gate/tool/: main.cpp
src/gate/transformer/: bdd.cpp  bdd.h  hmetis.cpp  hmetis.h
src/gate/truth_table/: truth_table.cpp  truth_table.h
src/rtl/: CMakeLists.txt  README.md
src/rtl/compiler/: compiler.cpp  compiler.h
src/rtl/model/: fsymbol.cpp  fsymbol.h  net.cpp  net.h  pnode.cpp  pnode.h  variable.h  vnode.cpp  vnode.h
src/rtl/parser/ril/: CMakeLists.txt  builder.cpp  builder.h  lexer.l  parser.cpp  parser.h  parser.y
test/: CMakeLists.txt  dddf.txt  dinput.txt  einput.txt  eoutput.txt
test/data/bench/: and.bench  nand.bench  nor.bench  not.bench  or.bench
test/data/fm/: test_gate_out.txt
test/data/gate/liberty/: normal1.lib
test/data/glverilog/ISCAS/: c432.v  c499.v  c6288.v  s1238.v  s1488.v  s27.v  s298.v  s38417.v  s386.v  s444.v  s510.v  s5378.v  s713.v  s820.v  s832.v  s838.v  s9234.v  s953.v
test/data/glverilog/logic_gates/: or.v  xnor.v  xor.v
test/data/ril/: add.ril  mul.ril  sub.ril
test/data/verilog-to-ril/: abc_01_cells.v  and_always.v  and_assign.v  dff.v  dffrs.v  latch.v  proc_02.v  summ1.v
test/gate/debugger/: bdd_checker_test.cpp  checker_test.cpp  failed_test.cpp  miter_test.cpp  rnd_checkerAndmiter_test.cpp  rnd_checker_complex_test.cpp  rnd_checker_test.cpp
test/gate/liberty/: liberty_test.cpp
test/gate/model/: gnet_test.cpp  gnet_test.h
test/gate/optimizer/: rwdatabase_test.cpp  ttbuilder_test.cpp
test/gate/parser/: parser_test.cpp
test/gate/parserGnet/: testGnet.cpp
test/gate/premapper/aigmapper/: aig_test.cpp  aig_test.h
test/gate/premapper/mapper/: mapper_test.cpp  mapper_test.h
test/gate/premapper/migmapper/: migmapper_test.cpp  migmapper_test.h
test/gate/premapper/xagmapper/: xag_ril_test.cpp  xag_test.cpp  xag_test.h  xag_verilog_test.cpp
test/gate/premapper/xmgmapper/: xmgmapper_test.cpp
test/gate/printer/: graphml_test.cpp
test/gate/rwdatabase/: rwdatabase_test.cpp
test/gate/simulator/: simulator_test.cpp
test/gate/transformer/: bdd_test.cpp
test/rtl/: adder_test.cpp  addtest.cpp
test/rtl/parser/ril/: ril_test.cpp
test/util/: fm_test.cpp
(+60 files in other folders)
